Fix some problems
Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>